--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my simle website</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
+    <div> 
+        <h3> my first website</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores iure distinctio sequi hic quod inventore. Corrupti laboriosam cum maxime excepturi saut, sint quis. Neque sed officiis, dolor sapiente atque fugit.</p>
+    </div>
     
 </body>
 </html>
