added the second and third blog

--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
         <h3> my first website</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores iure distinctio sequi hic quod inventore. Corrupti laboriosam cum maxime excepturi saut, sint quis. Neque sed officiis, dolor sapiente atque fugit.</p>
     </div>
+    <div> 
+        <h3> my second website</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores iure distinctio sequi hic quod inventore. Corrupti laboriosam cum maxime excepturi saut, sint quis. Neque sed officiis, dolor sapiente atque fugit.</p>
+    </div>
+    <div> 
+        <h3> my third website</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores iure distinctio sequi hic quod inventore. Corrupti laboriosam cum maxime excepturi saut, sint quis. Neque sed officiis, dolor sapiente atque fugit.</p>
+    </div>
+    <div> 
+        <h3> my fourth website</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores iure distinctio sequi hic quod inventore. Corrupti laboriosam cum maxime excepturi saut, sint quis. Neque sed officiis, dolor sapiente atque fugit.</p>
+    </div>
     
 </body>
 </html>
