added a list to push code

--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
         <h3> my fourth website</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores iure distinctio sequi hic quod inventore. Corrupti laboriosam cum maxime excepturi saut, sint quis. Neque sed officiis, dolor sapiente atque fugit.</p>
     </div>
+    <div> 
+        <h3>how to push incremental code</h3>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m"add a meaningful commit message </li>
+            <li>git push</li>
+        </ul>
+    </div>
+
     
 </body>
 </html>
