added emon's photo

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
             <li>git commit -m"add a meaningful commit message </li>
             <li>git push</li>
         </ul>
+    </div>s
+    <div>
+        <h3>emon used to play football</h3>
+        <img src="imeges/emon.jpg"
     </div>
 
     
